Fix the css path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRO Task</title>
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
@@ -14,12 +14,12 @@
         <div class="card-Main">
             <div class="card-Content">
                 <div class="card-Imgsection">
-                    <img class="wrench" src="/Wrench.png" alt="">
+                    <img class="wrench" src="Wrench.png" alt="">
                 </div>
                 <div class="card-Infosection">
                     <div class="title-Container">
                         <p class="item-Title">Lorem Ipsum Dolor Sit Amet Consectetur</p>
-                        <img class="rating" src="/rating.png" alt="">
+                        <img class="rating" src="rating.png" alt="">
                     </div>
                     <div class="id-Number">
                         <div class="id-Container">
